--- a/points-report.html
+++ b/points-report.html
@@ -123,7 +123,7 @@
           </div>
           <h3 class="head-title">Points History</h3>
           <div class="content-container points">
-            <div class="form flex-row gap-16">
+            <div class="form gap-16">
               <div class="input-feild">
                 <label for=""
                   >Start Date: <span class="required-star">*</span></label
