edit tablet and mobile screen (see index.html file)

--- a/index.html
+++ b/index.html
@@ -86,7 +86,59 @@
           </li>
         </ul>
       </div>
+      <!-- small screen sidebar -->
+      <div class="small-menu-btn" onclick="openSmallMenu()">
+        <img src="assets/icons/hum-menu.svg" alt="" />
+      </div>
+      <div class="logo small-screen">
+        <img src="assets/images/logo.svg" alt="" />
+      </div>
+      <div class="small-sidebar">
+        <div class="close-small-menu" onclick="closeSmallMenu()">
+          <img src="assets/icons/close-menu.svg" alt="" />
+        </div>
+        <div class="logo small-menu">
+          <img
+            class="large"
+            src="assets/images/logo-white.svg"
+            alt="ejada logo"
+          />
+        </div>
+        <img class="line small-screen" src="assets/icons/Vector 6.svg" alt="" />
 
+        <ul class="small-menu-list">
+          <li class="">
+            <a
+              >Home <img class="arrow" src="assets/icons/Vector.svg" alt="" />
+            </a>
+          </li>
+          <li>
+            <a
+              >Merchant Profile
+              <img class="arrow" src="assets/icons/Vector.svg" alt="" />
+            </a>
+          </li>
+          <li>
+            <a>Merchant Users</a>
+          </li>
+          <li>
+            <a>Product Management</a>
+          </li>
+          <li><a>Points Management</a></li>
+          <li class="active">
+            <a
+              >Reports
+              <img class="arrow" src="assets/icons/Vector.svg" alt="" />
+            </a>
+            <ul class="sub-menu">
+              <li><a>Transactions Report</a></li>
+              <li><a>Billing Report</a></li>
+              <li class="active"><a> Points Report</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <!-- ----------------------  -->
       <!-- ---End side bar menu --- -->
       <!-- ---- ---start dashboard header&content--- -->
       <div class="main-container dashboard">
@@ -101,7 +153,7 @@
                 alt="user image"
               />
               <h4>Nadine Hafez</h4>
-              <img src="assets/icons/Shape.svg" alt="" />
+              <img class="arrow" src="assets/icons/Shape.svg" alt="" />
             </div>
             <div class="notification">
               <img src="assets/icons/bell.svg" alt="" />
@@ -110,7 +162,7 @@
             <div class="language flex-row">
               <img src="assets/icons/world.svg" alt="" />
               <p>English</p>
-              <img src="assets/icons/Shape.svg" alt="" />
+              <img class="arrow" src="assets/icons/Shape.svg" alt="" />
             </div>
           </div>
         </header>
