--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="dashboard-container">
       <!-- ---Start sidebar menu --- -->
       <div class="sidebar-container" id="sidebar-container">
+        <div class="overlay sidebar"></div>
         <!-- menu collapse icon -->
         <div class="collapse-icon" onclick="collapseSidebar()">
           <img src="assets/icons/Collapse Nav bar.svg" alt="" />
@@ -94,6 +95,7 @@
         <img src="assets/images/logo.svg" alt="" />
       </div>
       <div class="small-sidebar">
+        <div class="overlay sidebar"></div>
         <div class="close-small-menu" onclick="closeSmallMenu()">
           <img src="assets/icons/close-menu.svg" alt="" />
         </div>
