--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
             <a>Product Management</a>
           </li>
           <li><a>Points Management</a></li>
-          <li class="active">
-            <a
+          <li>
+            <a class="active"
               >Reports
               <img class="arrow" src="assets/icons/Vector.svg" alt="" />
             </a>
             <ul class="sub-menu">
               <li><a>Transactions Report</a></li>
               <li><a>Billing Report</a></li>
-              <li class="active"><a> Points Report</a></li>
+              <li><a class="active"> Points Report</a></li>
             </ul>
           </li>
         </ul>
